syntax = "proto3";

package onight.zjfae.afront.gens;
option java_package="onight.zjfae.afront.gensazj";
option java_outer_classname="ProductOrderInfoPB";
//Generated By BrewRobot:Thu Feb 23 10:20:41 CST 2017

message PBIFE_trade_queryProductOrderInfo{
	///ife/trade/queryProductOrderInfo.html
	message PageInfo{
		string pageSize = 1;	 //,页大小,String,不校验,是,
		string pageIndex = 2;	 //,当前页,String,不校验,是,
		string pageCount = 3;	 //,总页数,String,不校验,是,
		string totalCount = 4;	 //,总条数,String,不校验,是,
	}

	message TaProductOrderInfoWrapList{
		string orderEndDate = 1;	 //,预约结束时间,String,不校验,是,
		string productCode = 2;	 //,产品编码,String,不校验,是,
		string buyerSmallestAmount = 3;	 //,认购起点金额,String,不校验,是,
		string buyRemainAmount = 4;	 //,剩余发行量,String,不校验,是,
		string expectedMaxAnnualRate = 5;	 //,预期年化收益率,String,不校验,是,
		string buyStartDate = 6;	 //,募集开始时间,String,不校验,是,
		string productName = 7;	 //,产品名称,String,不校验,是,
		string depositRate = 8;	 //,保证金比例,String,不校验,是,
		string isOrderFlag = 9;	 //,是否已预约,String,不校验,是,
		string ifCanOrder = 10;	 //,是否能预约,String,不校验,是,
		string process = 11; //剩余百分比进度条,String,不校验,是,
	}


	PageInfo pageInfo = 1; //,预约产品列表,List,不校验,是,

	repeated TaProductOrderInfoWrapList taProductOrderInfoWrapList = 2;


}

message Ret_PBIFE_trade_queryProductOrderInfo{
	///ife/trade/queryProductOrderInfo.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_trade_queryProductOrderInfo data=3;


}

message REQ_PBIFE_trade_queryProductOrderInfo{
	///ife/trade/queryProductOrderInfo.html

	string pageIndex = 1; //,当前页,String,不校验,是,默认1

	string pageSize = 2; //,页大小,String,不校验,是,默认10

	string orderType = 3; //,预约产品类型,String,不校验,是,期限标志01-长期，02-短期

	string version = 4; //,版本号,String,不校验,是,设为1.0.1预约产品类型查询才生效


}